--- a/src/components/LoginSignupPage/LoginSignupPage.css
+++ b/src/components/LoginSignupPage/LoginSignupPage.css
@@ -138,3 +138,35 @@ a:hover {
   font-size: 14px;
   margin-top: 5px;
 }
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  padding: 1rem 0;
+  margin: 0;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.navbar li {
+  display: inline;
+}
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.home-content {
+  margin-top: 60px;
+  padding: 1rem;
+}
